færdig med opgaven!

--- a/httpdemo/web/index.html
+++ b/httpdemo/web/index.html
@@ -14,8 +14,38 @@ and open the template in the editor.
     </head>
     <body>
         <div>
-            <p> Tomcat demo 111</p>
-            <a href="MyHttpServlet?navn=peter&alder=50">Link til Servlet</a>
+            <p> Request URL:https://www.cphbusiness.dk/
+Request Method:GET
+Status Code:200 OK
+Remote Address:104.41.212.83:443
+Response Headers
+view source
+Cache-Control:private
+Content-Length:49089
+Content-Type:text/html; charset=utf-8
+Date:Thu, 03 Nov 2016 15:23:54 GMT
+Request Headers
+view source
+Accept:text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,*/*;q=0.8
+Accept-Encoding:gzip, deflate, sdch, br
+Accept-Language:da-DK,da;q=0.8,en-US;q=0.6,en;q=0.4
+Cache-Control:no-cache
+Connection:keep-alive
+Cookie:__utma=20347370.1129290991.1474400952.1474400952.1477512328.2; __utmz=20347370.1477512328.2.2.utmcsr=google|utmccn=(organic)|utmcmd=organic|utmctr=(not%20provided); VISITED_5319=Viewed; _ga=GA1.2.1129290991.1474400952
+Host:www.cphbusiness.dk
+Pragma:no-cache
+Upgrade-Insecure-Requests:1
+User-Agent:Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/54.0.2840.71 Safari/537.36</p>
+        </div>
+        
+        <div id="billede_ramme">
+            <img id="billede" src="img/IMG1.png" alt=""/>
+        </div>
+        <div>
+            <a class="links" href="MyHttpServlet?navn=Peter Flodgaard Madsen">Præsentation</a>
+            </div>
+        <div>
+            <a  class="links" href="http://cphbusiness.dk">Link til cphbusiness.dk</a>
         </div>
     </body>
 </html>
